--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "node index.js",
     "dev": "vite",
-    "build": "vite build",
+    "build": "webpack --config webpack.config.js vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
